--- a/app/src/main/res/layout/activity_add_timesheet.xml
+++ b/app/src/main/res/layout/activity_add_timesheet.xml
@@ -46,30 +46,21 @@
         android:id="@+id/btnAddSheet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginBottom="16dp"
-        android:text="Enter"
+        android:text="Create Timesheet"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/btnAddCat" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/timeImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnAddCat"
-        app:layout_constraintEnd_toEndOf="@+id/btnAddCat"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="9dp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_end_time"
+        app:layout_constraintTop_toBottomOf="@+id/btn_end_time"
         tools:srcCompat="@tools:sample/avatars" />
-
-    <Button
-        android:id="@+id/btnAddCat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="Add Catagory"
-        app:layout_constraintBottom_toTopOf="@+id/btnAddSheet"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_date"
@@ -95,10 +86,10 @@
         android:id="@+id/btn_end_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="29dp"
         android:layout_marginTop="9dp"
-        android:layout_marginEnd="29dp"
         android:text="Select End Time"
-        app:layout_constraintEnd_toEndOf="@+id/in_end_time"
+        app:layout_constraintStart_toStartOf="@+id/in_end_time"
         app:layout_constraintTop_toBottomOf="@+id/in_end_time" />
 
     <EditText
@@ -129,7 +120,19 @@
         android:layout_marginTop="19dp"
         android:ems="10"
         android:inputType="text"
+        app:layout_constraintEnd_toEndOf="@+id/in_start_time"
         app:layout_constraintStart_toStartOf="@+id/in_start_time"
         app:layout_constraintTop_toBottomOf="@+id/btn_start_time" />
+
+    <Spinner
+        android:id="@+id/spnCategory"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="26dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnAddSheet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
