--- a/app/src/main/res/layout/activity_category_page.xml
+++ b/app/src/main/res/layout/activity_category_page.xml
@@ -54,6 +54,7 @@
         android:layout_marginBottom="209dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCreatecat">
 
@@ -63,6 +64,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
     </ScrollView>
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        tools:layout_editor_absoluteX="160dp"
+        tools:layout_editor_absoluteY="530dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
