--- a/app/src/main/res/layout/activity_add_timesheet.xml
+++ b/app/src/main/res/layout/activity_add_timesheet.xml
@@ -53,14 +53,15 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/timeImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="9dp"
+        android:id="@+id/selectedImage"
+        android:layout_width="195dp"
+        android:layout_height="185dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="4dp"
+        android:src="@drawable/checked"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@+id/btn_end_time"
-        app:layout_constraintTop_toBottomOf="@+id/btn_end_time"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_end_time" />
 
     <Button
         android:id="@+id/btn_date"
@@ -134,5 +135,14 @@
         app:layout_constraintBottom_toTopOf="@+id/btnAddSheet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnImageSelection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/selectedImage"
+        tools:layout_editor_absoluteY="499dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
