fixing a few mistakes

--- a/app/src/main/res/layout/activity_category_page.xml
+++ b/app/src/main/res/layout/activity_category_page.xml
@@ -27,8 +27,8 @@
         android:layout_marginBottom="44dp"
         android:layout_weight="1"
         android:ems="10"
+        android:hint="Enter Category"
         android:inputType="text"
-        android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/btnCreatecat"
         app:layout_constraintEnd_toStartOf="@+id/textView9"
         app:layout_constraintStart_toStartOf="@+id/textView9"
@@ -50,13 +50,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="48dp"
+        android:layout_marginTop="253dp"
         android:layout_marginEnd="48dp"
-        android:layout_marginBottom="209dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCreatecat">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/categoryContainer"
@@ -69,9 +70,12 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="153dp"
         android:text="Back"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="530dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
