--- a/app/src/main/res/layout/activity_add_timesheet.xml
+++ b/app/src/main/res/layout/activity_add_timesheet.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".AddTask">
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/registerpage"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="0dp" />
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
@@ -36,8 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:ems="10"
+        android:hint="Enter Description of task"
         android:inputType="text"
-        android:text="Description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -144,5 +152,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/selectedImage"
         tools:layout_editor_absoluteY="499dp" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
