--- a/app/src/main/res/layout/image_selection.xml
+++ b/app/src/main/res/layout/image_selection.xml
@@ -15,4 +15,12 @@
         android:stretchMode="columnWidth"
         android:gravity="center"/>
 
+    <Button
+        android:id="@+id/btnTakePhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Take Photo"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"/>
+
 </LinearLayout>
