--- a/app/src/main/res/layout/activity_category_page.xml
+++ b/app/src/main/res/layout/activity_category_page.xml
@@ -47,8 +47,8 @@
 
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="311dp"
+        android:layout_height="220dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="253dp"
         android:layout_marginEnd="48dp"
@@ -70,10 +70,10 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="153dp"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView" />
 
