--- a/app/src/main/res/layout/activity_total_hours.xml
+++ b/app/src/main/res/layout/activity_total_hours.xml
@@ -10,12 +10,10 @@
     <TextView
         android:id="@+id/lblTotalHours"
         android:layout_width="197dp"
-        android:layout_height="0dp"
+        android:layout_height="19dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="47dp"
         android:text="Total Hours"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,12 +23,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="82dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="43dp"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblTotalHours">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtStartDateCat"
@@ -44,9 +41,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/spnCatHours"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
@@ -62,11 +58,10 @@
         android:id="@+id/btnTotalHours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
         android:text="Calculate"
-        app:layout_constraintBottom_toTopOf="@+id/lblCalcHours"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/lblCalcHours"
         app:layout_constraintTop_toBottomOf="@+id/spnCatHours" />
 
     <Spinner
@@ -74,9 +69,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnTotalHours"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
@@ -85,6 +79,7 @@
         android:id="@+id/lblCalcHours"
         android:layout_width="238dp"
         android:layout_height="82dp"
+        android:layout_marginTop="50dp"
         android:layout_marginBottom="45dp"
         app:layout_constraintBottom_toTopOf="@+id/lblHoursNumber"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,14 +88,22 @@
 
     <TextView
         android:id="@+id/lblHoursNumber"
-        android:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="128dp"
         android:text="Total Hours are Displayed Here"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/lblCalcHours"
-        app:layout_constraintTop_toBottomOf="@+id/lblCalcHours" />
+        app:layout_constraintEnd_toEndOf="@+id/lblCalcHours" />
+
+    <Button
+        android:id="@+id/btnBackCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="45dp"
+        android:text="Back"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnTotalHours"
+        app:layout_constraintStart_toEndOf="@+id/btnTotalHours" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
